Sun Apr 26 20:33:12 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/transcode-tb (ActionMap#generate_node):
	  Use ActionMap#gennode instead of generate_node
	  because of initialization.

Sun Apr 26 18:35:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_reopen): keeps pathv for prep_stdio.  [ruby-dev:38131]

Sun Apr 26 15:13:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser#parse_in_order): do not make an
	  option from non-option argument.  [ruby-dev:38333]

Sat Apr 25 19:11:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ac_cv_func_daemon): use daemon(3) only on *BSD.

	* process.c (proc_daemon): double fork to ensure not having ctty.
	  [ruby-core:23305]

Sun Apr 19 14:43:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_cleanup): the order of local variables on stack is
	  undefined.  should use outermost VALUE for ruby_init_stack.

Mon Apr 13 11:35:55 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* sprintf.c (rb_str_format): optimize previous commit.
	  [ruby-list:45954]

Mon Apr 13 10:58:54 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* sprintf.c (rb_str_format): check encoding compatibility only on
	  real parts.

Sun Apr 19 13:17:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gem_prelude.rb (Gem::QuickLoader#push_gem_version_on_load_path):
	  check for requirement if the gem is installed.  a patch from
	  Kyosuke MOROHASHI at [ruby-dev:38020].

Wed Apr 15 20:24:49 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* array.c (rb_ary_flatten): flatten(0) works as Array#dup.
	  [ruby-core:23168]

	* test/ruby/test_array.rb: add a test for above.

Fri Apr 17 00:45:09 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* dir.c (bracket): fix escape handling for range character in bracket
	  of fnmatch pattern.  e.g., '[a\-c]' should not match 'b'.

Wed Apr 15 11:53:35 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* dir.c (fnmatch_helper): use rb_enc_precise_mbclen and